Bug 311782 - Directory loading has been cancelled sometimes falsly triggered
Summary: Directory loading has been cancelled sometimes falsly triggered
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.85
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-16 15:41 UTC by Kai Uwe Broulik
Modified: 2012-12-19 16:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2012-12-16 15:41:18 UTC
When I am browsing a remote computer using sftp and I manually enter an URL there that doesn't exist such as sftp://192.168.0.100/some/directory, I get a brief message that this directory does not exist which is replaced by the "DIrectory loading has been cancelled" shortly after.

Reproducible: Always

Steps to Reproduce:
1. Browse a remote computer using sftp
2. Then click the address bar and add some garbage to the path
3. Press enter
Actual Results:  
A message saying "The path sftp://computer/some/path doesn't exist" appears briefly, then being replaced by "Directory loading has been cancelled" message.

Expected Results:  
A message saying "The path sftp://computer/some/path doesn't exist" appears.
Comment 1 Frank Reininghaus 2012-12-17 13:56:37 UTC
Thanks for reporting. I guess this was caused by https://git.reviewboard.kde.org/r/107116/.

@Emmanuel: I haven't looked at this in detail yet, but maybe we could emit DolphinView's directoryLoadingCanceled() signal in void DolphinView::stopLoading(), rather than forwarding the signal from the dir lister via the model and the view? I wasn't aware that KDirLister also emits its canceled() signal when an error occurs.
Comment 2 Emmanuel Pescosta 2012-12-17 14:39:38 UTC
(In reply to comment #1)
> Thanks for reporting. I guess this was caused by
> https://git.reviewboard.kde.org/r/107116/.
> 
> @Emmanuel: I haven't looked at this in detail yet, but maybe we could emit
> DolphinView's directoryLoadingCanceled() signal in void
> DolphinView::stopLoading(), rather than forwarding the signal from the dir
> lister via the model and the view? I wasn't aware that KDirLister also emits
> its canceled() signal when an error occurs.

Ok, I will fix it as soon as possible ;)
Comment 3 Frank Reininghaus 2012-12-17 16:46:51 UTC
Great, thanks!
Comment 4 Emmanuel Pescosta 2012-12-17 17:03:26 UTC
Review-Request: https://git.reviewboard.kde.org/r/107787/
Comment 5 Emmanuel Pescosta 2012-12-19 13:05:39 UTC
Git commit cc1abb2f8fe9eb1482380c37468dd00806675a47 by Emmanuel Pescosta.
Committed on 19/12/2012 at 14:03.
Pushed by emmanuelp into branch 'master'.

Fix Bug 311782 - Directory loading has been cancelled sometimes falsly triggered which was introduced by commit 9dbc24fd647e0457d50ec901d33100c33967be68
REVIEW: 107787
FIXED-IN: 4.10

M  +1    -1    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/cc1abb2f8fe9eb1482380c37468dd00806675a47
Comment 6 Emmanuel Pescosta 2012-12-19 16:32:28 UTC
Git commit 07ee7c0658617cb55c7cc2a6da34df9469bc62fc by Emmanuel Pescosta.
Committed on 19/12/2012 at 17:31.
Pushed by emmanuelp into branch 'KDE/4.10'.

Fix Bug 311782 - Directory loading has been cancelled sometimes falsly triggered which was introduced by commit 9dbc24fd647e0457d50ec901d33100c33967be68
REVIEW: 107787
FIXED-IN: 4.10

M  +1    -1    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/07ee7c0658617cb55c7cc2a6da34df9469bc62fc