Fix Bug 311782 - Directory loading has been cancelled sometimes falsly triggered which was introduced by commit 9dbc24fd647e0457d50ec901d33100c33967be68

BUG: 311782
REVIEW: 107787
FIXED-IN: 4.10